--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,7 @@ body {
     font-size: 0.8rem; // tamaño de texto por defecto
     height: 100vh;
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 .main-content {
     position: absolute; 
